# COM760_Group7

./: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
launch/: group7bot_controllers.launch  group7bot_gazebo.launch
msg/: Move.msg
scripts/: avoid.py  follow_wall.py  go_to_point.py  motor_control.py  reading_laser.py
urdf/: group7bot.gazebo  group7bot.xacro  week7bot.urdf
world/: new_jersey.world
